// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsReducer should handle all defined error types: rejected types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "ADD_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "DELETE_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined error types: rejected types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "UPDATE_CREDENTIAL_REJECTED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "ADD_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "DELETE_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined fulfilled types: fulfilled types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "data": Object {
        "test": "success",
      },
      "date": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": true,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "UPDATE_CREDENTIAL_FULFILLED",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "ADD_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "DELETE_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "update": false,
    },
  },
  "type": "GET_CREDENTIALS_PENDING",
}
`;

exports[`CredentialsReducer should handle all defined pending types: pending types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "errorStatus": undefined,
      "fulfilled": false,
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
      "show": false,
      "update": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "UPDATE_CREDENTIAL_PENDING",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type CREATE_CREDENTIAL_SHOW 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": true,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": true,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "CREATE_CREDENTIAL_SHOW",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type DESELECT_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {
      "undefined": null,
    },
    "update": 0,
    "view": Object {},
  },
  "type": "DESELECT_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type EDIT_CREDENTIAL_SHOW 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": true,
      "show": true,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "EDIT_CREDENTIAL_SHOW",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type EXPANDED_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {
      "undefined": undefined,
    },
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "EXPANDED_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type NOT_EXPANDED_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {
      "undefined": null,
    },
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "NOT_EXPANDED_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type RESET_CREDENTIAL_ACTIONS 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "RESET_CREDENTIAL_ACTIONS",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type SELECT_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {
      "undefined": undefined,
    },
    "update": 0,
    "view": Object {},
  },
  "type": "SELECT_CREDENTIAL",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type UPDATE_CREDENTIAL_HIDE 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 0,
    "view": Object {},
  },
  "type": "UPDATE_CREDENTIAL_HIDE",
}
`;

exports[`CredentialsReducer should handle specific defined types: defined type UPDATE_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "deleted": Object {},
    "dialog": Object {
      "add": false,
      "credential": undefined,
      "credentialType": undefined,
      "edit": false,
      "show": false,
    },
    "expanded": Object {},
    "selected": Object {},
    "update": 1654041600000,
    "view": Object {},
  },
  "type": "UPDATE_CREDENTIALS",
}
`;
